@@ -32,108 +32,108 @@ import java.util.List;
 @EnableWebSecurity
 @EnableMethodSecurity
 public class SecurityConfiguracao {
-    private static final  String ORIGENS_PERMITIDAS = "*";
+  private static final  String ORIGENS_PERMITIDAS = "*";
 
-    @Autowired
-    private AutenticacaoService autenticacaoService;
+  @Autowired
+  private AutenticacaoService autenticacaoService;
 
-    @Autowired
-    private AutenticacaoEntryPoint autenticacaoJwtEntryPoint;
+  @Autowired
+  private AutenticacaoEntryPoint autenticacaoJwtEntryPoint;
 
-    private static final AntPathRequestMatcher[] URLS_PERMITIDAS = {
-            new AntPathRequestMatcher("/swagger-ui/**"),
-            new AntPathRequestMatcher("/swagger-ui.html"),
-            new AntPathRequestMatcher("/swagger-resources"),
-            new AntPathRequestMatcher("/swagger-resources/**"),
-            new AntPathRequestMatcher("/configuration/ui"),
-            new AntPathRequestMatcher("/configuration/security"),
-            new AntPathRequestMatcher("/api/public/**"),
-            new AntPathRequestMatcher("/api/public/authenticate"),
-            new AntPathRequestMatcher("/webjars/**"),
-            new AntPathRequestMatcher("/v3/api-docs/**"),
-            new AntPathRequestMatcher("/actuator/*"),
-            new AntPathRequestMatcher("/usuarios/**"),
-            new AntPathRequestMatcher("/usuarios/*"),
-            new AntPathRequestMatcher("/usuarios"),
-            new AntPathRequestMatcher("/usuarios/login/**"),
-            new AntPathRequestMatcher("/unidades-medida/**"),
-            new AntPathRequestMatcher("/categorias/**"),
-            new AntPathRequestMatcher("/itens/**"),
-            new AntPathRequestMatcher("/produtos/**"),
-            new AntPathRequestMatcher("/fechamentos/**"),
-            new AntPathRequestMatcher("/interacoes-estoque/**"),
-            new AntPathRequestMatcher("/h2-console/**"),
-            new AntPathRequestMatcher("/error/**")
-            //pode precisar ter o mySQL
-    };
+  private static final AntPathRequestMatcher[] URLS_PERMITIDAS = {
+      new AntPathRequestMatcher("/swagger-ui/**"),
+      new AntPathRequestMatcher("/swagger-ui.html"),
+      new AntPathRequestMatcher("/swagger-resources"),
+      new AntPathRequestMatcher("/swagger-resources/**"),
+      new AntPathRequestMatcher("/configuration/ui"),
+      new AntPathRequestMatcher("/configuration/security"),
+      new AntPathRequestMatcher("/api/public/**"),
+      new AntPathRequestMatcher("/api/public/authenticate"),
+      new AntPathRequestMatcher("/webjars/**"),
+      new AntPathRequestMatcher("/v3/api-docs/**"),
+      new AntPathRequestMatcher("/actuator/*"),
+      new AntPathRequestMatcher("/usuarios/**"),
+      new AntPathRequestMatcher("/usuarios/*"),
+      new AntPathRequestMatcher("/usuarios"),
+      new AntPathRequestMatcher("/usuarios/login/**"),
+      new AntPathRequestMatcher("/unidades-medida/**"),
+      new AntPathRequestMatcher("/categorias/**"),
+      new AntPathRequestMatcher("/itens/**"),
+      new AntPathRequestMatcher("/produtos/**"),
+      new AntPathRequestMatcher("/fechamentos/**"),
+      new AntPathRequestMatcher("/interacoes-estoque/**"),
+      new AntPathRequestMatcher("/h2-console/**"),
+      new AntPathRequestMatcher("/error/**")
+      //pode precisar ter o mySQL
+  };
 
-    @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http)
-            throws Exception{
-        http.cors(Customizer.withDefaults())
-                .csrf(CsrfConfigurer<HttpSecurity>::disable)
-                .authorizeHttpRequests(authorize -> authorize.requestMatchers(URLS_PERMITIDAS)
-                        .permitAll()
-                        .anyRequest()
-                        .authenticated()
-                )
-                .exceptionHandling(handling -> handling.authenticationEntryPoint(autenticacaoJwtEntryPoint))
-                .sessionManagement(management-> management.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
+  @Bean
+  public SecurityFilterChain filterChain(HttpSecurity http)
+      throws Exception{
+    http.cors(Customizer.withDefaults())
+        .csrf(CsrfConfigurer<HttpSecurity>::disable)
+        .authorizeHttpRequests(authorize -> authorize.requestMatchers(URLS_PERMITIDAS)
+            .permitAll()
+            .anyRequest()
+            .authenticated()
+        )
+        .exceptionHandling(handling -> handling.authenticationEntryPoint(autenticacaoJwtEntryPoint))
+        .sessionManagement(management-> management.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
 
-        http.addFilterBefore(jwtAuthenticationFilterBean(), UsernamePasswordAuthenticationFilter.class);
+    http.addFilterBefore(jwtAuthenticationFilterBean(), UsernamePasswordAuthenticationFilter.class);
 
-        return http.build();
-    }
+    return http.build();
+  }
 
-    @Bean
-    public AuthenticationManager authManager(HttpSecurity http) throws Exception{
-        AuthenticationManagerBuilder authenticationManagerBuilder =
-                http.getSharedObject(AuthenticationManagerBuilder.class);
-        authenticationManagerBuilder.authenticationProvider(new AutenticacaoProvider(autenticacaoService, passwordEncoder()));
-        return authenticationManagerBuilder.build();
-    }
+  @Bean
+  public AuthenticationManager authManager(HttpSecurity http) throws Exception{
+    AuthenticationManagerBuilder authenticationManagerBuilder =
+        http.getSharedObject(AuthenticationManagerBuilder.class);
+    authenticationManagerBuilder.authenticationProvider(new AutenticacaoProvider(autenticacaoService, passwordEncoder()));
+    return authenticationManagerBuilder.build();
+  }
 
-    @Bean
-    public AutenticacaoEntryPoint jwtAuthenticationEntryPointBean(){
-        return new AutenticacaoEntryPoint();
-    }
+  @Bean
+  public AutenticacaoEntryPoint jwtAuthenticationEntryPointBean(){
+    return new AutenticacaoEntryPoint();
+  }
 
-    @Bean
-    public AutenticacaoFilter jwtAuthenticationFilterBean(){
-        return new AutenticacaoFilter(autenticacaoService, jwtAuthentificationUtilBean());
-    }
+  @Bean
+  public AutenticacaoFilter jwtAuthenticationFilterBean(){
+    return new AutenticacaoFilter(autenticacaoService, jwtAuthentificationUtilBean());
+  }
 
-    @Bean
-    public GerenciadorTokenJwt jwtAuthentificationUtilBean(){
-        return new GerenciadorTokenJwt();
-    }
+  @Bean
+  public GerenciadorTokenJwt jwtAuthentificationUtilBean(){
+    return new GerenciadorTokenJwt();
+  }
 
-    @Bean
-    public PasswordEncoder passwordEncoder(){
-        return new BCryptPasswordEncoder();
-    }
+  @Bean
+  public PasswordEncoder passwordEncoder(){
+    return new BCryptPasswordEncoder();
+  }
 
-    @Bean
-    public CorsConfigurationSource corsConfigurationSource(){
-        CorsConfiguration configuracao = new CorsConfiguration();
-        configuracao.applyPermitDefaultValues();
-        configuracao.setAllowedMethods(
-                Arrays.asList(
-                        HttpMethod.GET.name(),
-                        HttpMethod.POST.name(),
-                        HttpMethod.PUT.name(),
-                        HttpMethod.PATCH.name(),
-                        HttpMethod.DELETE.name(),
-                        HttpMethod.OPTIONS.name(),
-                        HttpMethod.HEAD.name(),
-                        HttpMethod.TRACE.name()));
-        configuracao.setExposedHeaders(List.of(HttpHeaders.CONTENT_DISPOSITION));
+  @Bean
+  public CorsConfigurationSource corsConfigurationSource(){
+    CorsConfiguration configuracao = new CorsConfiguration();
+    configuracao.applyPermitDefaultValues();
+    configuracao.setAllowedMethods(
+        Arrays.asList(
+            HttpMethod.GET.name(),
+            HttpMethod.POST.name(),
+            HttpMethod.PUT.name(),
+            HttpMethod.PATCH.name(),
+            HttpMethod.DELETE.name(),
+            HttpMethod.OPTIONS.name(),
+            HttpMethod.HEAD.name(),
+            HttpMethod.TRACE.name()));
+    configuracao.setExposedHeaders(List.of(HttpHeaders.CONTENT_DISPOSITION));
 
-        UrlBasedCorsConfigurationSource origem = new UrlBasedCorsConfigurationSource();
-        origem.registerCorsConfiguration("/**", configuracao);
+    UrlBasedCorsConfigurationSource origem = new UrlBasedCorsConfigurationSource();
+    origem.registerCorsConfiguration("/**", configuracao);
 
-        return origem;
-    }
+    return origem;
+  }
 
 
 }
